--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -18,8 +18,20 @@ body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
+  font-family: 'Source Sans 3', sans-serif;
+}
+
+nav span {
+  font-family: 'Bungee', cursive, sans-serif;
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+ main {
+  width: 90%;
+  margin: 0 auto;
+  background-color: #f5f5f5;
+  padding: 20px;
+}
