--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -69,3 +69,10 @@
   color: darkkhaki;
 }
 
+@media only screen and (min-width: 1024px) {
+  #tweets-container {
+      width: 100%;
+    }
+  }
+
+  
