--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,34 +1,53 @@
 .header {
   background-color: #E64A19;
-  height: 520px;
   width: 100%;
+  margin-top: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: aqua;
+  font-family: sans-serif;
+  color: white;
+  padding: 10px;
 }
 
-.avatar{
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  background-color: #0095ba;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 1px;
-}
+
 
 .avatar img {
-  max-width: 100%;
-  max-height: 100%;
-  border-radius: 50%;
+  display: flex;
+  margin-left: 10px;
+  margin-right: 10px;
+  max-width: 150px;
+  max-height: 150px;
+  height: auto;
+  width: auto;
+  justify-content: center;
 }
 
 .name{
-  font-size: 24px;
-  font-weight: bold;
+  margin-top: -30px;
+  font-size: 1.25rem;
   
 }
 
+@media only screen and (min-width: 1024px) {
+  .header {
+    margin-top: 175px;
+    margin-left: 50px;
+    margin-right: 30px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+  
+  .avatar img {
+    max-width: 175px;
+    max-height: 175px;
+  }
+  
+  .name {
+    font-size: 1.5rem;
+  }
+  }
+
+
+  
