--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -17,21 +17,42 @@ html {
 body {
   color: #545149;
   background-color: #f4f1ec;
-  font-size: 24px;
-  font-family: 'Source Sans 3', sans-serif;
+  font-size: 20px;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 400;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
 }
 
-nav span {
-  font-family: 'Bungee', cursive, sans-serif;
-}
+
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 
  main {
-  width: 90%;
-  margin: 0 auto;
-  background-color: #f5f5f5;
-  padding: 20px;
+  display: flex;
+  width: 100%;
+  background-color: #f4f1ec;
+  flex-direction: column;
+  font-family: sans-serif;
+  align-items: center;
+  padding-top: 20px;
+}
+
+@media only screen and (min-width: 1024px) {
+  body {
+    flex-direction: row;
+    align-items: flex-start;
+  }
+  
+  main {
+    width: 100%;
+  
+    margin-top: 120px;
+    margin-right: 50px;
+    margin-left: 30px;
+  }
 }
