--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -44,4 +44,28 @@
   color: red
 }
 
+.error-message-box {
+  display: flex;
+  border: 3px solid red;
+  color: red;
+  padding: 10px;
+  margin-bottom: 15px;
+  margin-top: -10px;
+  font-size: 20px;
+  font-family: sans-serif;
+  align-items: center;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: center;
+}
 
+.fa-exclamation-triangle {
+margin-left: 5px;
+margin-right: 5px;
+}
+
+@media only screen and (min-width: 1024px) {
+  .new-tweet {
+    width: 100%;
+  } 
+ }
